--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <div id="app"></div>
+    <!-- <script>
+      window.global = window;
+      window.process = {
+        env: { DEBUG: undefined },
+      };
+    </script> -->
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
